--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "meanjs",
+  "name": "makeithappen",
   "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
-  "version": "0.3.3",
-  "private": false,
-  "author": "https://github.com/meanjs/mean/graphs/contributors",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/meanjs/mean.git"
-  },
   "engines": {
     "node": ">=0.10.28",
     "npm": ">=1.4.28"
