--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "grunt-contrib-csslint": "^0.3.1",
     "grunt-contrib-cssmin": "~0.10.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "^1.2.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-env": "~0.4.1",
