--- a/app/package.json
+++ b/app/package.json
@@ -41,7 +41,9 @@
     "chalk": "~1.0.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
     "grunt-concurrent": "~1.0.0",
     "grunt-contrib-copy": "0.8",
     "grunt-contrib-csslint": "^0.3.1",
