Create Forgot password page

--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -21,6 +21,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # config.vm.network :forwarded_port, guest: 80, host: 8080
   config.vm.network :forwarded_port, guest: 3000, host: 3000
+  config.vm.network :forwarded_port, guest: 35729, host: 35729
+  #config.vm.network :forwarded_port, guest: 1337, host: 1337  
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -48,6 +50,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Example for VirtualBox:
   #
   # config.vm.provider :virtualbox do |vb|
+  #  vb.memory = 2048
+  #  vb.cpus = 4
+  # end
   #   # Don't boot with headless mode
   #   vb.gui = true
   #
