--- a/app/bower.json
+++ b/app/bower.json
@@ -12,6 +12,7 @@
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.11",
     "angular-ui-notification": "^0.2.0",
-	"angular-file-upload": "^2.2.0"
+	"angular-file-upload": "^2.2.0",
+	"modelOptions": "ngModelOptions#^0.0.1"
   }
 }
