--- a/app/bower.json
+++ b/app/bower.json
@@ -12,10 +12,13 @@
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.11",
     "owasp-password-strength-test": "~1.3.0",
-    "angular-strap": "2.3.8"
+    "angular-strap": "2.3.8",
+    "angular-ui-calendar": "~1.0.1",
+    "fullcalendar": "~2.6.1"
   },
   "resolutions": {
     "angular": "~1.2",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "fullcalendar": "2.3.1"
   }
 }
