--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "helmet": "~0.5.0",
     "lodash": "~2.4.1",
     "method-override": "~2.3.0",
+    "mongodb": "^2.1.18",
     "mongoose": "~3.8.8",
     "morgan": "~1.4.1",
     "multer": "^1.1.0",
@@ -60,7 +61,7 @@
     "grunt-karma": "~0.9.0",
     "grunt-mocha-test": "~0.12.1",
     "grunt-ng-annotate": "~0.4.0",
-    "grunt-node-inspector": "~0.1.3",
+    "grunt-node-inspector": ">=0.1.3",
     "grunt-nodemon": "~0.3.0",
     "karma": "~0.12.0",
     "karma-chrome-launcher": "~0.1.2",
