--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -26,7 +26,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network :private_network, ip: "192.168.56.13"
+  # config.vm.network :private_network, ip: "192.168.56.13"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -49,10 +49,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider :virtualbox do |vb|
-  #  vb.memory = 2048
-  #  vb.cpus = 4
-  # end
+  config.vm.provider :virtualbox do |vb|
+   vb.memory = 2048
+   vb.cpus = 2
+  end
   #   # Don't boot with headless mode
   #   vb.gui = true
   #
