--- a/VM/Vagrantfile
+++ b/VM/Vagrantfile
@@ -50,8 +50,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Example for VirtualBox:
   #
   config.vm.provider :virtualbox do |vb|
-   vb.memory = 2048
-   vb.cpus = 2
+    vb.customize ["modifyvm", :id, "--ioapic", "on"]
+    vb.customize ["modifyvm", :id, "--cpus"  , "4"   ]
+    vb.customize ["modifyvm", :id, "--memory", "2048"]
   end
   #   # Don't boot with headless mode
   #   vb.gui = true
