--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,7 @@
     "mongoose": "~3.8.8",
     "morgan": "~1.4.1",
     "multer": "^1.1.0",
+    "node-schedule": "^1.1.1",
     "nodemailer": "~1.3.0",
     "owasp-password-strength-test": "^1.3.0",
     "passport": "~0.2.0",
