--- a/app/package.json
+++ b/app/package.json
@@ -51,6 +51,7 @@
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-concurrent": "~1.0.0",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "0.8",
     "grunt-contrib-csslint": "^0.3.1",
     "grunt-contrib-cssmin": "~0.10.0",
