--- a/app/bower.json
+++ b/app/bower.json
@@ -19,7 +19,8 @@
     "angular-ui-calendar": "~1.0.1",
     "fullcalendar": "~2.6.1",
     "angular-bootstrap-datetimepicker": "^1.0.1",
-	"angular-morris-chart": "^1.2.0"
+    "angular-morris-chart": "^1.2.0",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
   },
   "devDependencies": {
     "angularjs-slider": "^2.11.0"
