[AD] Fix > app no longer fails to instantiate: put hardcoded version for Angular-morris-chart, because newer versions changed its folder structure and module name (non-semver?)

--- a/app/bower.json
+++ b/app/bower.json
@@ -19,7 +19,7 @@
     "angular-ui-calendar": "1.0.1",
     "fullcalendar": "~2.6.1",
     "angular-bootstrap-datetimepicker": "^1.0.1",
-    "angular-morris-chart": "^1.2.0",
+    "angular-morris-chart": "1.2.0",
     "lodash": "^4.15.0",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37"
   },
