heroku launch attempt #5: add "web" script to package.json, remove procfile

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "start": "grunt",
+    "web": "grunt",
     "test": "grunt test",
     "postinstall": "bower install --config.interactive=false"
   },
