--- a/.editorconfig
+++ b/.editorconfig
@@ -1,26 +1,13 @@
-# EditorConfig is awesome: http://EditorConfig.org
+# EditorConfig helps developers define and maintain consistent
+# coding styles between different editors and IDEs
+# http://editorconfig.org
 
-# How-to with your editor: http://editorconfig.org/#download
-
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
+indent_style = spaces
+indent_size = 2
 end_of_line = lf
-indent_style = tab
-tab_width = 4
+charset = utf-8
+trim_trailing_whitespace = true
 insert_final_newline = true
-
-[{Dockerfile,Procfile}]
-trim_trailing_whitespace = true
-
-# Standard at: https://github.com/felixge/node-style-guide
-[{*.js,*.json}]
-trim_trailing_whitespace = true
-quote_type = single
-curly_bracket_next_line = false
-spaces_around_operators = true
-space_after_control_statements = true
-space_after_anonymous_functions = false
-spaces_in_brackets = false
