--- a/package.json
+++ b/package.json
@@ -48,6 +48,13 @@
   "devDependencies": {
     "angular-material": "^1.0.8",
     "babel-preset-es2015": "^6.6.0",
+    "eslint": "~2.13.1",
+    "eslint-config-airbnb-base": "~1.0.4",
+    "eslint-config-angular": "~0.5.0",
+    "eslint-loader": "~1.3.0",
+    "eslint-plugin-angular": "~1.0.1",
+    "eslint-plugin-import": "~1.8.1",
+    "eslint-plugin-smells": "~1.0.1",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-concurrent": "~1.0.0",
