--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "lodash": "^4.15.0",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
     "angular-cookies": "1.2.32",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "ng-dialog": "^0.6.4"
   },
   "devDependencies": {
     "angularjs-slider": "^2.11.0"
