313: Improve LESS infrastructure.  Update grunt LESS build and improve related files.

--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,8 @@ public/*.map
 public/dist
 public/modules/**/*.map
 public/modules/**/*.js
-public/modules/**/*.css
+public/css/*.css
+public/**/*.css
 public/modules/users/img/profiles/*
 
 
